Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -249,30 +249,21 @@
 
 <!-- Claim Calculator -->
 <section id="calculator" class="py-16 bg-white">
-    <div class="max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-2 gap-8 items-start">
+    <div class="max-w-3xl mx-auto px-4 space-y-12">
   
-      <!-- Left: ExitMyTimeshares Do-It-Yourself Kit Promo -->
-      <div class="bg-blue-50 rounded-xl p-6 shadow-md h-full" data-aos="fade-up">
-        <h2 class="text-xl font-bold mb-4 text-blue-800">Escape Your Timeshare — Without the Legal Fees</h2>
+      <!-- 1. Kit Promo -->
+      <div class="bg-blue-50 rounded-xl p-6 shadow-md" data-aos="fade-up">
+        <h2 class="text-2xl font-bold mb-4 text-blue-800">Escape Your Timeshare — Without the Legal Fees</h2>
         <p class="text-gray-700 mb-3">
           Stuck in a timeshare you no longer want? Our <strong>Do-It-Yourself Exit Kit</strong> gives you everything you need to take back control — without paying thousands to lawyers or risky exit companies.
         </p>
         <p class="text-gray-600">
           Created by legal experts, this kit includes the same professional letters and guidance we use for real claims — ready for you to download and use today.
         </p>
-        <hr class="my-4">
-        <h3 class="text-xl font-bold text-blue-800 mb-2">What’s Inside the Kit?</h3>
-        <ul class="list-disc list-inside text-gray-700 space-y-2">
-          <li>Ready-to-use legal letters to cancel your timeshare.</li>
-          <li>Step-by-step instructions in your own language.</li>
-          <li>Covers contracts from United States, Spain, Portugal, and across the EU.</li>
-          <li>No pressure: you can upgrade later for expert help if needed.</li>
-          <li>One-time purchase. No hidden fees. Instant access.</li>
-        </ul>
       </div>
   
-    <!-- Right: Resort Eligibility Checker -->
-    <div class="bg-white rounded-xl p-6 shadow-md h-full" data-aos="fade-up">
+      <!-- 2. Resort Eligibility Checker -->
+      <div class="bg-white rounded-xl p-6 shadow-md" data-aos="fade-up">
         <div class="bg-yellow-300 text-blue-900 px-4 py-4 rounded-t-xl text-center border-b-2 border-yellow-500">
           <h2 class="text-2xl font-bold">Check If Your Resort Is Eligible</h2>
           <p class="text-base mt-1">
@@ -294,78 +285,91 @@
            class="mt-6 block w-full text-center bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300 hidden">
           Get the Do-It-Yourself Exit Kit →
         </a>
-          
-      <!-- Tip + Fallback Message -->
-      <p class="mt-6 text-sm text-gray-700 text-center">
-        <strong>Not listed?</strong> Contact us — we may still be able to help!<br>
-        💡 <em>Tip:</em> Many resorts allow free exit if no loan is outstanding — check with them directly.
-      </p>
-          
-      <!-- Bottom CTA -->
-      <div class="mt-6 text-center">
-        <a href="/download-kit.html"
-           class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
-          Buy your Do-It-Yourself Kit today for only $229 | £169 | €199
-        </a>
-      </div>
-    </div>
-  </div>      
   
-        <!-- Resort List -->
-        <datalist id="resorts">
-          <option value="Anfi Del Mar">
-          <option value="Club La Costa (CLC)">
-          <option value="Los Amigos Beach Club">
-          <option value="Royal Oasis Club at Pueblo Quinta">
-          <option value="Sahara Sunset Club">
-          <option value="Santa Barbara Golf & Ocean Club">
-          <option value="Sunset Bay Club">
-          <option value="Sunset Harbour Club">
-          <option value="Sunset View Club">
-          <option value="Royal Tenerife Country Club">
-          <option value="Marriott Playa Andaluza">
-          <option value="Marriott Marbella Beach Resort">
-          <option value="Club Son Antem (Marriott)">
-          <option value="Club Cala Blanca (CLC)">
-          <option value="Club del Carmen (CLC)">
-          <option value="Jardines del Sol (CLC)">
-          <option value="Village d’Île‑de‑France (Marriott)">
-          <option value="Le Club Mougins (Diamond)">
-          <option value="Royal Regency Paris Vincennes (Diamond)">
-          <option value="Borgo alle Vigne (Hilton)">
-          <option value="Palazzo Catalani (Diamond)">
-          <option value="Vilar do Golf (Diamond)">
-          <option value="Alpine Club (Diamond)">
-          <option value="Craigendarroch (Hilton)">
-          <option value="Cromer Country Club (Diamond)">
-          <option value="Pine Lake Resort (Diamond)">
-          <option value="The Kenmore Club (Diamond)">
-          <option value="Thurnham Hall (Diamond)">
-          <option value="Woodford Bridge Country Club (Diamond)">
-          <option value="Wychnor Park Country Club (Diamond)">
-          <option value="Cibola Vista Resort & Spa (Bluegreen)">
-          <option value="Bell Rock Inn (Diamond)">
-          <option value="Kohls Ranch Lodge (Diamond)">
-          <option value="Los Abrigados Resort & Spa (Diamond)">
-          <option value="PVC at The Roundhouse (Diamond)">
-          <option value="Streamside at Vail (Bluegreen)">
-          <option value="The Historic Crags Lodge (Diamond)">
-          <option value="Lake Cumberland Resort (Bluegreen)">
-          <option value="Scenic Hills RV Resort (Bluegreen)">
-          <option value="Paradise Point (Bluegreen)">
-          <option value="Wilderness Club at Big Cedar (Bluegreen)">
-          <option value="Villas de Santa Fe (Diamond)">
-          <option value="Beachwoods Resort (Diamond)">
-          <option value="Sunrise Ridge Resort (Diamond)">
-          <option value="Laurel Crest (Bluegreen)">
-          <option value="Mountain Loft (Bluegreen)">
-          <option value="Shenandoah Crossing (Bluegreen)">
-          <option value="Patrick Henry Square (Bluegreen)">
-          <option value="Parkside Williamsburg Resort (Bluegreen)">
-          <option value="Elian Hotel & Spa (Bluegreen)">
-        </datalist>
+        <!-- Tip + Fallback -->
+        <p class="mt-6 text-sm text-gray-700 text-center">
+          <strong>Not listed?</strong> Contact us — we may still be able to help!<br>
+          💡 <em>Tip:</em> Many resorts allow free exit if no loan is outstanding — check with them directly.
+        </p>
+  
+        <!-- Bottom CTA -->
+        <div class="mt-6 text-center">
+          <a href="/download-kit.html"
+             class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
+            Buy your Do-It-Yourself Kit today for only $229 | £169 | €199
+          </a>
+        </div>
       </div>
+  
+      <!-- 3. What's Inside the Kit -->
+      <div class="bg-blue-50 rounded-xl p-6 shadow-md" data-aos="fade-up">
+        <h3 class="text-xl font-bold text-blue-800 mb-4">What’s Inside the Kit?</h3>
+        <ul class="list-disc list-inside text-gray-700 space-y-2">
+          <li>Ready-to-use legal letters to cancel your timeshare.</li>
+          <li>Step-by-step instructions in your own language.</li>
+          <li>Covers contracts from United States, Spain, Portugal, and across the EU.</li>
+          <li>No pressure: you can upgrade later for expert help if needed.</li>
+          <li>One-time purchase. No hidden fees. Instant access.</li>
+        </ul>
+      </div>
+  
+      <!-- Resort List -->
+      <datalist id="resorts">
+        <option value="Anfi Del Mar">
+        <option value="Club La Costa (CLC)">
+        <option value="Los Amigos Beach Club">
+        <option value="Royal Oasis Club at Pueblo Quinta">
+        <option value="Sahara Sunset Club">
+        <option value="Santa Barbara Golf & Ocean Club">
+        <option value="Sunset Bay Club">
+        <option value="Sunset Harbour Club">
+        <option value="Sunset View Club">
+        <option value="Royal Tenerife Country Club">
+        <option value="Marriott Playa Andaluza">
+        <option value="Marriott Marbella Beach Resort">
+        <option value="Club Son Antem (Marriott)">
+        <option value="Club Cala Blanca (CLC)">
+        <option value="Club del Carmen (CLC)">
+        <option value="Jardines del Sol (CLC)">
+        <option value="Village d’Île‑de‑France (Marriott)">
+        <option value="Le Club Mougins (Diamond)">
+        <option value="Royal Regency Paris Vincennes (Diamond)">
+        <option value="Borgo alle Vigne (Hilton)">
+        <option value="Palazzo Catalani (Diamond)">
+        <option value="Vilar do Golf (Diamond)">
+        <option value="Alpine Club (Diamond)">
+        <option value="Craigendarroch (Hilton)">
+        <option value="Cromer Country Club (Diamond)">
+        <option value="Pine Lake Resort (Diamond)">
+        <option value="The Kenmore Club (Diamond)">
+        <option value="Thurnham Hall (Diamond)">
+        <option value="Woodford Bridge Country Club (Diamond)">
+        <option value="Wychnor Park Country Club (Diamond)">
+        <option value="Cibola Vista Resort & Spa (Bluegreen)">
+        <option value="Bell Rock Inn (Diamond)">
+        <option value="Kohls Ranch Lodge (Diamond)">
+        <option value="Los Abrigados Resort & Spa (Diamond)">
+        <option value="PVC at The Roundhouse (Diamond)">
+        <option value="Streamside at Vail (Bluegreen)">
+        <option value="The Historic Crags Lodge (Diamond)">
+        <option value="Lake Cumberland Resort (Bluegreen)">
+        <option value="Scenic Hills RV Resort (Bluegreen)">
+        <option value="Paradise Point (Bluegreen)">
+        <option value="Wilderness Club at Big Cedar (Bluegreen)">
+        <option value="Villas de Santa Fe (Diamond)">
+        <option value="Beachwoods Resort (Diamond)">
+        <option value="Sunrise Ridge Resort (Diamond)">
+        <option value="Laurel Crest (Bluegreen)">
+        <option value="Mountain Loft (Bluegreen)">
+        <option value="Shenandoah Crossing (Bluegreen)">
+        <option value="Patrick Henry Square (Bluegreen)">
+        <option value="Parkside Williamsburg Resort (Bluegreen)">
+        <option value="Elian Hotel & Spa (Bluegreen)">
+      </datalist>
+  
     </div>
+  </section>
+  
 
 <!-- Spacer to separate sections -->
 <div class="w-full h-10"></div>
