Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -573,7 +573,7 @@
       <div class="bg-white border border-gray-200 rounded-lg p-6 shadow-sm">
         <div class="text-5xl mb-2">⚖️</div>
         <h4 class="font-semibold mb-1">Legal-Grade Templates</h4>
-        <p class="text-gray-600">Lawyer-vetted letters—just fill in and send.</p>
+        <p class="text-gray-600">Lawyer-vetted letters, just fill in and send.</p>
       </div>
       <div class="bg-white border border-gray-200 rounded-lg p-6 shadow-sm">
         <div class="text-5xl mb-2">💸</div>
@@ -583,7 +583,7 @@
       <div class="bg-white border border-gray-200 rounded-lg p-6 shadow-sm">
         <div class="text-5xl mb-2">⏱️</div>
         <h4 class="font-semibold mb-1">Fast & Easy</h4>
-        <p class="text-gray-600">Exit in a few weeks—no back-and-forth.</p>
+        <p class="text-gray-600">Exit in a few weeks, no back-and-forth.</p>
       </div>
       <div class="bg-white border border-gray-200 rounded-lg p-6 shadow-sm">
         <div class="text-5xl mb-2">📋</div>
