Your update message here

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -94,7 +94,7 @@
   <body>
   
     <header style="display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
-        <img src="images/quaerens-logo.png" alt="Quaerens Logo" style="height: 60px;">
+        <img src="images/exitmytimeshares-logo.png" alt="Quaerens Logo" style="height: 60px;">
         <div style="display: flex; gap: 0.5rem;">
             <img 
             src="flags/en.png" 
@@ -170,7 +170,7 @@
     <div class="form-wrapper">
       <div class="form-header">
         <h1>Submit Your Claim</h1>
-        <img src="/quaerens-logo.png" alt="Quaerens Logo" />
+        <img src="images/quaerens-logo.png" alt="Quaerens Logo" />
       </div>
       <form id="claimForm">
         <label for="title">Title</label>
