--- a/public/checkout.html
+++ b/public/checkout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Submit Your Claim | Quaerens Ltd</title>
+    <title>Access Your Do-It-Yourself Kit | ExitMyTimeshares.com – Quaerens Ltd</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" />
     <style>
       body {
@@ -23,17 +23,18 @@
         position: relative;
       }
       .form-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 1rem;
+        margin-bottom: 1.5rem;
       }
       .form-header h1 {
-        font-size: 1.5rem;
-        margin: 0;
+        font-size: 1.75rem;
+        margin-bottom: 0.5rem;
+        font-weight: 700;
+        color: #1e40af;
       }
-      .form-header img {
-        height: 40px;
+      .form-header p {
+        font-size: 1rem;
+        color: #4b5563;
+        margin: 0;
       }
       label {
         display: block;
@@ -78,17 +79,26 @@
         border-color: #3b82f6;
       }
       .message {
-    margin-top: 1rem;
-    text-align: center;
-    font-weight: 500;
-    opacity: 0;
-    transform: translateY(-10px);
-    transition: all 0.4s ease;
-  }
-  .message.show {
-    opacity: 1;
-    transform: translateY(0);
-  }
+        margin-top: 1rem;
+        text-align: center;
+        font-weight: 500;
+        opacity: 0;
+        transform: translateY(-10px);
+        transition: all 0.4s ease;
+      }
+      .message.show {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="form-wrapper">
+      <div class="form-header">
+        <h1>Access Your DIY Exit Kit</h1>
+        <p>Fill in your details so we can prepare your personalised timeshare cancellation kit. You’ll then be directed to secure payment.</p>
+      </div>
+
 </style>
   </head>
   <body>
@@ -192,38 +202,71 @@
         <label for="phone">Phone Number</label>
         <input type="tel" id="phone" required />
 
-        <label for="type">Type of Claim</label>
+        <label for="type">Resort Name</label>
         <select id="type" required>
           <option value="">Select...</option>
-          <option value="flight delay">Flight Delay</option>
-          <option value="train delay">Train Delay</option>
-          <option value="car finance">Car Finance</option>
-          <option value="housing disrepair">Housing Disrepair</option>
-          <option value="Spanish mortgage">Spanish Mortgage</option>
-          <option value="mis sold bank accounts">Mis-sold Bank Accounts</option>
-          <option value="credit card fees">Credit Card Fees</option>
-          <option value="medical negligence">Medical Negligence</option>
-          <option value="timeshare">Timeshare</option>
-          <option value="refund issues">Refund Issues</option>
-          <option value="cross border">Cross Border</option>
-          <option value="pension issues">Pension Issues</option>
-          <option value="holiday compensation">Holiday Compensation</option>
-          <option value="caravan/holiday park">Caravan/Holiday Park</option>
-          <option value="cyber data breach">Cyber Data Breach</option>
-          <option value="airbnb refunds">AIRBNB Refunds</option>
-          <option value="crypto scam recovery">Crypto Scam Recovery</option>
-          <option value="other claims">Other Claims</option>
-          <option value="contact me">Contact Me</option> 
+          <option>My resort is not listed</option>
+          <option>Anfi Del Mar</option>
+          <option>Club La Costa (CLC)</option>
+          <option>Los Amigos Beach Club</option>
+          <option>Royal Oasis Club at Pueblo Quinta</option>
+          <option>Sahara Sunset Club</option>
+          <option>Santa Barbara Golf & Ocean Club</option>
+          <option>Sunset Bay Club</option>
+          <option>Sunset Harbour Club</option>
+          <option>Sunset View Club</option>
+          <option>Royal Tenerife Country Club</option>
+          <option>Marriott Playa Andaluza</option>
+          <option>Marriott Marbella Beach Resort</option>
+          <option>Club Son Antem (Marriott)</option>
+          <option>Club Cala Blanca (CLC)</option>
+          <option>Club del Carmen (CLC)</option>
+          <option>Jardines del Sol (CLC)</option>
+          <option>Village d’Île‑de‑France (Marriott)</option>
+          <option>Le Club Mougins (Diamond)</option>
+          <option>Royal Regency Paris Vincennes (Diamond)</option>
+          <option>Borgo alle Vigne (Hilton)</option>
+          <option>Palazzo Catalani (Diamond)</option>
+          <option>Vilar do Golf (Diamond)</option>
+          <option>Alpine Club (Diamond)</option>
+          <option>Craigendarroch (Hilton)</option>
+          <option>Cromer Country Club (Diamond)</option>
+          <option>Pine Lake Resort (Diamond)</option>
+          <option>The Kenmore Club (Diamond)</option>
+          <option>Thurnham Hall (Diamond)</option>
+          <option>Woodford Bridge Country Club (Diamond)</option>
+          <option>Wychnor Park Country Club (Diamond)</option>
+          <option>Cibola Vista Resort & Spa (Bluegreen)</option>
+          <option>Bell Rock Inn (Diamond)</option>
+          <option>Kohls Ranch Lodge (Diamond)</option>
+          <option>Los Abrigados Resort & Spa (Diamond)</option>
+          <option>PVC at The Roundhouse (Diamond)</option>
+          <option>Streamside at Vail (Bluegreen)</option>
+          <option>The Historic Crags Lodge (Diamond)</option>
+          <option>Lake Cumberland Resort (Bluegreen)</option>
+          <option>Scenic Hills RV Resort (Bluegreen)</option>
+          <option>Paradise Point (Bluegreen)</option>
+          <option>Wilderness Club at Big Cedar (Bluegreen)</option>
+          <option>Villas de Santa Fe (Diamond)</option>
+          <option>Beachwoods Resort (Diamond)</option>
+          <option>Sunrise Ridge Resort (Diamond)</option>
+          <option>Laurel Crest (Bluegreen)</option>
+          <option>Mountain Loft (Bluegreen)</option>
+          <option>Shenandoah Crossing (Bluegreen)</option>
+          <option>Patrick Henry Square (Bluegreen)</option>
+          <option>Parkside Williamsburg Resort (Bluegreen)</option>
+          <option>Elian Hotel & Spa (Bluegreen)</option>
         </select>
+        
 
-        <label for="details">Claim Details</label>
+        <label for="details">Any additional information</label>
         <textarea id="details" rows="5" required></textarea>
 
         <label for="fileUpload">Attach a file (PDF, image, etc.)</label>
         <div class="upload-area" id="uploadArea">Drag & Drop or Click to Upload</div>
         <input type="file" id="fileUpload" hidden />
 
-        <button type="submit">Submit Claim</button>
+        <button type="submit">Go to checkout</button>
         <div class="message" id="message"></div>
       </form>
     </div>
@@ -294,7 +337,7 @@ import { getFirestore, collection, addDoc } from "https://www.gstatic.com/fireba
       console.log("File uploaded:", fileUrl);
     }
 
-    const subject = `New Claim Submitted: ${type}`;
+    const subject = `New DIY Kit Request - Timeshare`;
     const html = `
       <p><strong>Title:</strong> ${title}</p>
       <p><strong>Name:</strong> ${name}</p>
@@ -328,7 +371,7 @@ import { getFirestore, collection, addDoc } from "https://www.gstatic.com/fireba
     });
 
     if (response.ok) {
-      message.textContent = "✅ Claim submitted successfully!";
+        window.location.href = "https://checkout.exitmytimeshares.com"; // Gumroad page
       message.classList.add("show");
       form.reset();
       uploadArea.textContent = "Drag & Drop or Click to Upload";
