Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -856,7 +856,7 @@
   </section>
   
   <div class="text-center space-y-4">
-    <a href="/download-kit.html"
+    <a href="/checkout.html"
        class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
       Buy your Do-It-Yourself Kit today for only $229 | £169 | €199
     </a>
@@ -972,11 +972,11 @@
 
   <!-- Sticky Footer CTA -->
   <div class="sticky-footer fixed bottom-0 left-0 w-full bg-white border-t border-gray-200 p-3 flex justify-center gap-4">
-    <a href="/download-kit.html"
+    <a href="/checkout.html"
        class="flex-1 text-center bg-green-600 hover:bg-green-700 text-white font-bold py-2 rounded-lg shadow">
       Buy the Do It Yourself Kit £169 | €189 | $209
     </a>
-    <a href="/full-service.html"
+    <a href="/checkout.html"
        class="flex-1 text-center bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 rounded-lg shadow">
       Choose the "Full-Service" Option
     </a>
