Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -26,7 +26,7 @@
     },
     "offers": {
       "@type": "Offer",
-      "url": "https://www.exitmytimeshares.com/download-kit.html",
+      "url": "https://www.exitmytimeshares.com/checkout.html",
       "priceCurrency": "EUR",
       "price": "169.00",
       "availability": "https://schema.org/InStock"
@@ -294,7 +294,7 @@
   
         <!-- Bottom CTA -->
         <div class="mt-6 text-center">
-          <a href="/download-kit.html"
+          <a href="/checkout.html"
              class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
             Buy your Do-It-Yourself Kit today for only $229 | £169 | €199
           </a>
