Mobile layout fix

--- a/public/test3.html
+++ b/public/test3.html
@@ -205,7 +205,7 @@
   
       <!-- 1. Kit Promo -->
       <div class="bg-blue-50 rounded-xl p-6 shadow-md" data-aos="fade-up">
-        <h2 class="text-2xl font-bold mb-4 text-blue-800">Exit Your Timeshare — Without the Legal Fees</h2>
+        <h2 class="text-2xl font-bold mb-4 text-blue-800">Exit Your Timeshare Without the Legal Fees</h2>
         <p class="text-gray-700 mb-3">
           Stuck in a timeshare you no longer want? Our <strong>Do-It-Yourself Exit Kit</strong> gives you everything you need to take back control and exit out of your timeshare contract <strong>without</strong> paying thousands to lawyers or risky or expensive exit companies.
         </p>
